--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
   <script src="https://apis.google.com/js/platform.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <script src="https://js.live.net/v7.2/OneDrive.js"></script>
 </head>
 <body class="mat-typography">
   <!-- <script type="text/javascript" src="scripts/zip.js"></script> -->
